--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -204,3 +204,7 @@ C++优势：1）C++是不断更新的语言
 
 虚继承是为了解决菱形继承的问题，虚继承只保存一份间接基类的成员；
 
+##### 5、mmap
+
+内存映射，mmap() 系统调⽤函数会直接把内核缓冲区⾥的数据「映射」到⽤户空间，这样，操作系统 内核与⽤户空间就不需要再进⾏任何的数据拷⻉操作。
+
