--- a/基础知识汇总/项目总结.md
+++ b/基础知识汇总/项目总结.md
@@ -12,6 +12,28 @@
 
 项目遇到的困难：ESP8266如何接入阿里云，最后选择轻量级mqtt通讯协议，确定阿里云端的设备三元组后接入阿里云中。涉及的面比较多，开发工具使用了keil、ardunio、微信小程序开发平台。
 
+##### 为什么选择mqtt?
+
+##### 1)MQTT更加简单
+
+MQTT是一种消息队列协议，使用发布/订阅消息模式，提供一对多的消息发布，解除应用程序耦合，相对于其他协议，开发更简单；
+
+##### 2)MQTT网络更加稳定
+
+工作在TCP/IP协议上；由TCP/IP协议提供稳定的网络连接；
+
+**3)轻量级**
+
+小型传输，开销很小（固定长度的头部是 2 字节），协议交换最小化，以降低网络流量；适合低带宽，数据量较小的应用；
+
+**4)易于实现**
+
+MQTT协议的服务端程序已经非常成熟，PHP，JAVA，Python，C，C#等系统语言都可以来向MQTT发送相关消息；
+
+**5)开放性**
+
+源代码开放，都可以用，也进一步推动了MQTT的发展，百度云、阿里云、中国移动onenet等几乎所有的开放性物联网平台都支持MQTT；
+
  
 
 ##### 3、基于ROS的全向移动小车
