--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -208,3 +208,56 @@ C++优势：1）C++是不断更新的语言
 
 内存映射，mmap() 系统调⽤函数会直接把内核缓冲区⾥的数据「映射」到⽤户空间，这样，操作系统 内核与⽤户空间就不需要再进⾏任何的数据拷⻉操作。
 
+
+
+# vivo技术面6.23
+
+1、介绍项目，项目遇到的BUG，怎么解决的，出现的问题是什么
+
+2、如何比较一个字符串是否是另一个字符串的子串
+
+3、比较两个字符串大小、如果限定长度呢
+
+4、C++多态有哪些？
+
+5、反问，需要学习的知识、部门主要做什么的
+
+
+
+# 乐鑫技术面一面6.22
+
+1、问项目、论文
+
+2、是否有硬件基础
+
+3、反问，工作节奏，部门工作
+
+# VIVO HR面6.25
+
+1、自我介绍（共享屏幕，被说PPT制作质量低，亮点少）
+
+2、工作地点、薪资期望
+
+3、大公司与小公司的区别差异
+
+4、逆商需要提高
+
+5、智力题，八个苹果，找出一个质量重的那个，两次机会
+
+6、反问，个人发展建议
+
+7、公司录取你的原因和不录取你的原因
+
+## 华为海思提前了解
+
+1、struct对齐
+
+2、C++新特性
+
+3、项目详细介绍，RRT优化、VPG夹爪抓取
+
+4、堆内存和栈内存
+
+5、git介绍，提交代码遇到冲突、提交远端步骤
+
+6、处理问题单的流程
