--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -261,3 +261,20 @@ C++优势：1）C++是不断更新的语言
 5、git介绍，提交代码遇到冲突、提交远端步骤
 
 6、处理问题单的流程
+
+
+
+##### 1、子网掩码的作用（又称为网络掩码、地址掩码、子网络遮罩）
+
+1）分割网络，减少IP地址的浪费
+
+2）计算网络号
+
+##### 2、mmap内存映射过程
+
+1）进程启动映射过程，并在虚拟地址空间中为映射创建虚拟映射区域
+
+2）调用内核空间的系统调用函数mmap（不同于用户空间函数），实现文件物理地址和进程虚拟地址的一一映射关系
+
+3）进程发起对这片映射空间的访问，引发缺页异常，实现文件内容到物理内存（主存）的拷贝
+
