--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -262,7 +262,9 @@ C++优势：1）C++是不断更新的语言
 
 6、处理问题单的流程
 
+##### 7、右值引用使用场景
 
+移动拷贝构造函数
 
 ##### 1、子网掩码的作用（又称为网络掩码、地址掩码、子网络遮罩）
 
@@ -277,4 +279,25 @@ C++优势：1）C++是不断更新的语言
 2）调用内核空间的系统调用函数mmap（不同于用户空间函数），实现文件物理地址和进程虚拟地址的一一映射关系
 
 3）进程发起对这片映射空间的访问，引发缺页异常，实现文件内容到物理内存（主存）的拷贝
+
+##### 3、为什么友元函数要在类内声明
+
+因为编译器必须能够**读取这个结构的声明以理解这个数据类型的大小**、行为等方面的所有规则。有一条规则在任何关系中都很重要，那就是谁可以访问我的私有部分。
+
+4、结构体所占内存计算
+
+```
+struct st {
+	short a;
+	char b;
+	float d;
+	double c;
+}; //占用16字节
+struct st {
+	short a;
+	int b;
+	double c;
+	float d;
+}; //占用24字节
+```
 
