--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -76,6 +76,8 @@
 
 ##### 14、const int \* 和 int \* const
 
+int const *p 和const int *p意义一样，指向常量的指针
+
 ##### 15、tcp长连接和短连接
 
 ##### 16、拥塞控制有哪些？讲一下慢开始
