--- a/基础知识汇总/操作系统.md
+++ b/基础知识汇总/操作系统.md
@@ -248,7 +248,7 @@ char b;  //长度1 < 2 按1对齐；偏移量为4；存放位置区间[4]
 
 short c;   //长度2 = 2 按2对齐；偏移量要提升到2的倍数6；存放位置区间[6,7]
 
-char d;  //长度1 < 2 按1对齐；偏移量为7；存放位置区间[8]；共九个字节
+char d;  //长度1 < 2 按1对齐；偏移量为7；存放位置区间[8]；共12个字节
 
 };
 
