--- a/基础知识汇总/操作系统.md
+++ b/基础知识汇总/操作系统.md
@@ -602,585 +602,19 @@ hrtimer的工作原理：
 
 **39、多线程的共享资源和独享**
 
-栈是每个线程独有的，线程之间共享的资源有代码段、堆空间、数据段、打开的文件；
+栈和寄存器是每个线程独有的，线程之间共享的资源有代码段、堆空间、数据段、打开的文件；
 
 **40、线程、进程间的同步**
 
 同步是指并发进程/线程在一些关键点上可能需要互相等待与互通消息，这种互相制约的等待与互通信息称为进程/线程同步。
 
+##### 41、一个进程切换到另一个进程，如何找到另一个进程要执行的地址？
 
+进程的上下文不仅包含了虚拟内存、栈、全局变量扽用户空间的资源，还包括了内核堆栈、寄存器等内核空间的资源。进程切换时即上下文切换。会根据上下文来检索下一个要执行的进程。
 
- 
+##### 42、fork和vfork区别
 
- 
+fork是copy
 
-## 一、深度理解操作系统第一章
+vfork（写时复制）是share
 
-**1、操作系统组成：进程管理、存储管理、文件管理、设备管理、系统调用**
-
-**2、操作系统特征：**
-
-1）并发（计算机系统中同时存在多个运行的程序，需要OS管理和调度）
-
-2）共享（“同时”访问、互斥共享）
-
-3）虚拟（利用多道程序设计技术，让每个用户都觉得有一个计算机为他服务）
-
-4）异步（程序的执行不是一贯到底，而是走走停停，向前推进的速度不可预知；但只要运行环境相同，OS需要保证程序运行的结果也相同）
-
-##### 3、Linux Windows Android的界面属于外壳(Shell)，而不是内核(kernel)。操作系统研究的是内核，处于Shell之下。
-
-**4、异步、同步**
-
-## 二、操作系统基本操作
-
-**1、中断、异常、系统调用**
-
-1）系统调用：(来源于应用程序)应用程序主动向操作系统发出服务请求。
-
-2）异常：(来源于不良的应用程序)非法指令或其它花的处理状态(e.g.内存出错)。
-
-3）中断：(来源于外设)来自不同的硬件设备的计时器和网络的中断。
-
-4）处理时间
-
-​    -中断：异步；
-
-​    -异常：同步；
-
-​    -系统调用：同步或异步。
-
-5）响应
-
-​    -中断：持续，对用户应用程序时透明的
-
-​    -异常：杀死或者重新执行意想不到的应用程序指令
-
-​    -系统调用：等待和持续
-
-**2、中断、异常处理机制**
-
-1）中断是外设的事件，异常是CPU的事件；中断/异常迫使CPU访问一些被中断和异常服务访问的功能。
-
-2）中断处理机制
-
-硬件：设置中断标记(CPU初始化)
-
-​    -将内部/外部事件设置中断标记；
-
-​    -中断事件的ID(程序访问的中断向量地址)
-
-软件(操作系统)：
-
-​    -保存当前处理状态
-
-​    -中断服务程序处理
-
-​    -清除中断标记
-
-​    -恢复之前保存的处理状态
-
-3）异常处理机制
-
-异常：异常编号
-
-​    -保存现场
-
-​    -异常处理：杀死产生异常的程序；重新执行异常指令
-
-​    -恢复现场
-
-4）系统调用
-
-​    -一条指令会触发一个系统调用
-
-​    -程序访问主要是通过高层次的API接口而不是直接进行系统调用。
-
-​    -通常情况下，存在与每个系统调用相关的序号，系统调用接口根据这些序号来维护表的索引。
-
-​    -系统调用接口调用内核态中预期的系统调用，并返回系统调用的状态和其它任何返回值。
-
-​    -用户不需要知道系统调用是如何实现的，只需要获取API和了解操作新系统将什么作为返回结果。操作系统接口的细节大部分都隐藏在API中，并通过运行程序支持的库来管理。
-
-​    -用户态：应用程序在执行的过程中，CPU执行的特权级的状态(很低，不能访问特殊机器指令和IO)。
-
-​    -内核态：应用程序在执行的过程中，CPU执行的特权级的状态(高，操作系统可以执行CPU任何一条指令)。
-
-​    -系统调用时涉及到特权级从用户态到内核态的转换，应用程序和操作系统有各自的堆栈，这两个变化比函数调用的开销更大，但更安全和可靠。(而程序调用是在一个栈空间实现参数的调用和返回)。
-
-5）跨越操作系统边界的开销
-
-​    -在执行时间上超过程序调用
-
-​    -开销包括：
-
-​       建立中断/异常/系统调用号与对应服务例程映射关系的初始化开销；
-
-​       建立内核堆栈(操作系统和应用程序的堆栈不一样)；
-
-​       验证参数(操作系统会检查数据)；
-
-​       内核态映射到用户态的地址空间，更新页面映射权限(内存拷贝开销)；
-
-​       内核态独立地址空间TLB。
-
-## 三、内存管理
-
-**1、计算机体系结构及内存分层体系**
-
-1）CPU
-
-2）内存
-
-3）外设
-
-**2、CPU访问速度由高到低**：CPU寄存器>cache>主存>磁盘>磁带
-
-**3、操作系统在内存管理要完成的目标**
-
--抽象：逻辑地址空间
-
--保护：独立地址空间
-
--共享：访问相同内存
-
--虚拟化：更多的地址空间
-
-**4、地址空间与地址生成**
-
-1）地址空间的定义：
-
-​    -物理地址空间：硬件支持的地址空间
-
-​    -逻辑地址空间：一个运行的程序所拥有的内存范围
-
-2）地址空间的生成
-
-3）应用程序的逻辑地址如何映射到物理地址？
-
-​    =>CPU方面
-
-​    a.运算器ALU需要在逻辑地址的内存内容(CPU要逻辑地址)
-
-​    b.内存管理单元MMU寻找在逻辑地址和物理地址之间的映射(然后MMU找逻辑和物理地址的关系)
-
-​    c. 控制器从总线发送在物理地址的内存内容的请求(关系找到后，去找对应物理地址)
-
-​    =>内存方面
-
-​    e.内存发送物理地址内存内容给CPU(物理地址找到了，给CPU)
-
-​    =>操作系统方面
-
-​    f.建立逻辑地址和物理地址之间的映射(确保程序不相互干扰)
-
-4）地址安全检查
-
-**5、连续内存分配：内存碎片与分区的动态分配**
-
-1）内存碎片问题
-
--空闲内存不能被利用
-
-外部碎片：在分配单元间的未使用内存
-
-内部碎片：在分配单元中的未使用内存
-
-2）简单的内存管理方法
-
--当一个程序准许运行在内存中时，分配一个连续的区间
-
--分配一个连续的内存区间给运行的程序以访问数据
-
-3）分区的动态分配策略
-
-a、首次适配
-
-​    –内容：现在想分配n字节，从低地址开始找，碰到的第一个空间比n大的空闲块就使用它。
-
-​    –要想实现首次分配，需要满足以下条件：
-
-​       需要存在一个按地址排序的空闲块列表
-
-​       分配需要找一个合适的分区
-
-​       重分配需要检查，看看自由分区能不能与相邻的空闲分区合并(形成更大的空闲块)，若有
-
-​    –优点：简单；易于产生更大的空闲块，向着地址空间的结尾；
-
-​    –缺点：外部碎片的问题会加剧；不确定性；
-
-b、最佳适配
-
-​    –内容：为了分配n字节，使用最小的可用空闲块，以致块的尺寸比n大；
-
-​    –目的：避免分割大的空闲块；最小化外部碎片产生的尺寸。
-
-​    –要想实现最佳分配，需要满足以下条件：
-
-​       按尺寸排列的空闲列表；
-
-​       分配需要寻找一个合适的分区；
-
-​       重分配需要搜索和合并于相邻的空闲分区，若有；
-
-​    –优点：大部分分配是小尺寸时很有效；简单；
-
-​    –缺点：外部碎片；重分配慢；易产生很多没用的微小碎片。
-
-c、最差适配
-
-​    –内容：为了分配n字节，使用最大的可用空闲块，以致块的尺寸比n大。
-
-​    –目的：避免太多的微小碎片
-
-​    –要想实现最差分配，需要满足以下条件：
-
-​       按尺寸排列的空闲列表
-
-​       分配很快(获得最大的分区)
-
-​       重分配需要合并于相邻的空闲分区，若有，然后调整空闲块列表
-
-​    –优点：假如分配时是中等尺寸效果最好；
-
-​    –缺点：重分配慢；外部碎片；易于破碎大的空闲块以至大分区不能被分割；
-
-##### 6、连续内存分配：压缩式与交换式碎片整理
-
-1）压缩式碎片整理（紧致）
-
-​    -重置程序以合并孔洞；
-
-​    -要求所有程序是动态可重置的；
-
-​    -问题：何时重置；开销；
-
-2）交换式碎片整理
-
-​    -运行程序需要更多的内存；
-
-​    -抢占等待的程序或回收它们的内存（把暂时不用的内容挪到磁盘里）；
-
- 
-
-##### 7、非连续内存分配：分段
-
-1）非连续内存分配的原因
-
-​    -连续内存分配的缺点：分配给一个程序的物理内存是连续的；内存利用率低；有外碎片/内碎片问题；
-
-​    -非连续内存分配的优点：分配给一个程序的物理内存是非连续的；更好的内存利用和管理；允许共享代码和数据(共享库等)；支持动态加载和动态链接；
-
-​    -非连续内存分配的缺点：如何建立虚拟地址和物理地址之间的转换；软件方案(开销大)；硬件方案
-
-2）两种硬件方案：分段和分页
-
-3）分段：逻辑地址空间是连续的，物理地址是离散的；
-
-4）分段寻址的方案：段访问机制，一个段指一个“内存块”，是一个逻辑地址空间。程序根据段访问机制访问内存地址需要一个二维的二元组(s段号，addr端内偏移)
-
-5）段访问机制的硬件实现方案：段表
-
- 
-
- 
-
-##### 8、非连续内存分配：分页
-
-1）分页地址空间：划分物理内存至固定大小的帧，大小是2的幂，划分逻辑地址空间至相同大小的页；转换逻辑地址为物理地址（页表）
-
-2）物理地址部分：页帧，物理内存被分割为大小相等的帧(物理地址部分)
-
-​    -一个内存的物理地址是一个二元组(f,o)，f:帧号(它是F位的，因此意味着一共2F个帧)；o：帧内偏移(它是S位的，因此意味着每帧有2S字节)；物理地址=2^S x f + o。
-
-3）逻辑地址部分：页，一个程序的逻辑地址空间被划分为大小相等的页（逻辑地址部分）
-
-​    -（逻辑地址的）页内偏移量 = （物理地址的）帧内偏移量
-
-​    -（逻辑地址的）页号大小可能不等于（物理地址的）帧号大小
-
-4）页寻址机制的实现
-
-​    页表实际上就是一个大的数组/hash表。它的index是 页号，对应的value是 页帧号，首先根据逻辑地址计算得到一个 页号，也就是index，再在页表中找到对应的 页帧号，最后根据 页帧号 计算得到物理地址；由于他们的页/帧内偏移相等，所以页表不需要保存这个数据。通过这种方式能够根据逻辑地址找到对应的物理地址。
-
-除此之外，还有一些flags标志位，见下一节。
-
-##### 9、非连续内存分配：页表****-****概述、****TLB
-
-​    本节介绍如何优化页表的时间开销问题，解决办法是缓存。
-
-​    TLB实际上是CPU的MMU内存管理单元保存的一段缓存，这段缓存保存的内容是 页表 的一部分，是经常访问到的那部分页表，其余不常用的页表内容保存在内存中。
-
-TLB未命中，也叫TLB miss，这种情况比较少见，因为一页很大，32位系统一页是4K，如果采用局部性原理，那么访问4k次才会遇到一次TLB miss。
-
-##### 10、非连续内存分配：页表****-****二级、多级页表
-
-​    本节介绍如何优化页表的空间开销问题，解决方法是 多级页表。虽然增加了内存访问次数和开销，但是节省了保存页表的空间(时间换空间，然后在通过TLB来减少时间消耗)。
-
-1）二级页表
-
-逻辑地址中，页号部分分成了2部分，p1和p2。p1存放着二级页表的起始地址，p2的作用就是之前的p。p1找二级页表，p2找页，o找地址。这里体现了二级页表的另一个好处，就是p1对应的位置是flags，假如说resident bit是0，那么整个二级页表都不用在内存中保存，这个是一级页表无法实现的！
-
-2）多级页表
-
-例如64位操作系统采用5级页表
-
-##### 11、非连续内存分配：反向页表****inverted page table
-
-​    反向页表：页表来表示物理地址(页帧)号，而不是之前的逻辑地址(页号)，能够减少页表尺寸，但是给映射关系的建立带来点困难。
-
-1）传统页表缺点：对于大地址空间，前向映射页表变得繁琐(例如64位系统采用5级页表)；逻辑地址空间增长速度快于物理地址空间，所以反向页表，也就是index是物理地址，value是逻辑地址，它的大小会小于传统页表。
-
-2）反向页表的实现：基于页寄存器的方案
-
-3）反向页表的实现：基于关联内存的方案
-
-4）反向页表的实现：基于哈希查找hash的方案
-
-##### 12、虚拟内存
-
-1）起因：经常出现内存不够了。程序规模的增长大于存储器容量的增长。
-
-​    把硬盘的空间也用上（扮演内存的作用），将不常用的放在硬盘上，常用的放在内存上。
-
-2）内存不够用的情况下，怎么办？
-
-​    如果程序太大，超过了内存的容量，可以采用手动的覆盖(overlay) 技术，只把需要的指令和数据保存在内存中
-
-​    如果是程序太多，超过了内存的容量，可以采用自动的交换(swapping) 技术，把暂时不能执行的程序送到外存中
-
-​    如果想在有限容量的内存中，以更小的页粒度为单位装入更多更大的程序，可以采用自动的虚拟存储技术 。
-
-##### 13、覆盖技术
-
-1）目标：在较小的可用内存中运行较大的程序。常用于多道程序系统，与分区存储管理配合使用。
-
-2）原理：
-
-​    把程序按照其自身逻辑结构，划分为若干个功能上相对独立的程序模块，那些不会同时执行的模块共享同一块内存区域，按时间先后来运行。
-
-​    -必要部分(常用功能)的代码和数据常驻内存
-
-​    -可选部分(不常用功能)在其它程序模块中实现，平时存放在外存中，在需要时才装入内存。
-
-​    -不存在调用关系的模块不必同时装入内存，从而可以相互覆盖，即这些模块共用一个分区。
-
-3）缺点：由程序员来把一个大的程序划分为若干个小的功能模块，并确定各个模块之间的覆盖关系，费时费力，增加了编程的复杂度。覆盖模块从外存装入内存，是以时间换空间。
-
- 
-
-##### 14、交换技术
-
-1）目标：多道程序在内存中时，让正在运行的程序或需要运行的程序获得更多的内存资源。
-
-2）方法：
-
-​    -可将暂时不能运行的程序送到外存，从而获得空闲内存空间。
-​    -操作系统把一个进程的整个地址空间的内容保存到外存中(换出swap out),而将将外存中的某个进程的地址空间读入到内存中(换入swap in)。换入换出内容大小为整个程序的地址空间。
-
-3）交换技术实现的几个问题
-
-​    -交换时机的确定：只有当内存空间不够或有不够的危险时换出；
-
--交换区的大小：必须足够大以存放所有用户进程的所有内存映像的拷贝，必须能对这些内存映像进行直接存取；
-
--程序换入时的重定位：因为换出换入后的内存位置不一定相同，所以最好采用动态地址映射的方法；
-
-4）覆盖技术与交换技术的比较
-
-​    覆盖只能发生在那些(程序内)相互之间没有调用关系的程序模块之间，因此程序员必须给出程序内的各个模块之间的逻辑覆盖结构。
-
-​    交换技术是以在内存中的程序大小为单位来进行的，它不需要程序员给出各个模块之间的逻辑覆盖结构。
-
-​    交换发生在内存中程序与管理程序或操作系统之间，而覆盖则发色会跟你在运行程序的内部。
-
-##### 15、虚拟内存管理技术
-
-1）目标：
-
-​    解决覆盖技术给程序员负担大和交换技术处理器开销大的问题。
-
-​    -像覆盖技术一样，不是把程序的所有内容都放在内存中，因而能够运行比当前的空闲内存空间还要大的程序。但做得更好，能由操作系统自动完成，无需程序员介入；
-
-​    -能像交换技术那样，能够实现进程在内存和外存之间的交换，因而获得更多的空闲内存空间。但能做得更好，只对进程的部分内容在内存和外存之间进行交换。
-
-2）程序的局部性原理
-
-​    指程序在执行过程中的一个较短时间，所执行的指令地址和指令的操作数地址分别局限于一定区域，表现为：
-
-​    时间局部性：一条指令的一次执行和下次执行，一个数据的一次访问和下次访问都集中在一个较短的时间里
-
-​    空间局部性：当前指令和领近的几条指令，当前访问的数据和领近的几个数据都集中在一个较小区域内
-
-​    程序的局部性原理表明，从理论上来说，虚拟存储技术是能够实现的，而且在实现了以后应该能够取得一个满意的效果的。
-
-3）基本概念 
-
- 4）基本特征
-
-5）虚拟页式内存管理
-
-6）后备存储
-
-##### 16、最优页面置换算法
-
-（1）功能目标
-
-​    功能：当缺页中断发生，需要调入新的页面而内存已满时，选择内存当中哪个物理页面被置换。
-
-​    目标：尽可能减少页面的换入换出次数(即缺页中断的次数)。把未来不再使用的或短期内较少使用的页面换出，通常只能在局部性原理的指导下依据过去的统计数据来进行预测。
-
-​    页面锁定(frame locking)：用于描述必须常驻内存的操作系统的关键部分或时间关键(time-critical)的应用进程。实现方法是，在页表中添加锁定标志位(lock bit)。
-
-（2）最优页面置换算法
-
-​    基本思路：当一个缺页中断发生时，对于保存在内存中的每一个逻辑页面，计算在它的下一次访问之前，还需要等待多长时间，从中选择等待时间最长的那个，作为被置换的页面。
-
-不过，这只是一种理想情况，在实际中无法实现，因为操作系统无法知道每一个页面要等待多长时间以后才会被再次访问。
-
-​    可用作其它算法的性能评价的依据(在一个模拟器上运行某个程序，并记录每一次的页面访问情况，在第二遍运行时即可使用最优算法)。
-
-##### 17、先进先出算法
-
-##### 18、最近最久未使用算法（LRU）
-
-##### 19、时钟页面置换算法
-
-##### 20、二次机会法
-
-​    如果是一次写操作，dirty bit会设置为1.说明内存访问这部分数据时是有写入操作的，和硬盘上原数据不一样，所以要写入硬盘，如果是0，对这部分内存没有写操作，那么说明内存和硬盘上内容是一样的，直接丢掉即可。
-
-目的就是减少对硬盘的写操作。
-
-​    如果used和dirty bit都是0，那么替换掉；如果其中一个是1，那么把这一位设置为0，指针往下走；如果都是1，那先把used换为0，说明有2次机会。
-
-##### 21、最不常用算法（LFU）
-
-##### 22、Belady现象，LRU、FIFO、Clock的比较
-
-##### 23、两个全局置换算法
-
-1）工作集页置换算法
-
-2）缺页率页面置换算法
-
-##### 24、抖动问题
-
-## 四、进程和线程
-
-##### 1、进程
-
-1）进程定义：一个具有一定独立功能的程序在一个数据集合上的一次动态执行过程。
-
-2）进程组成：
-
-​    程序的代码
-
-​       -程序处理的数据
-
-​       -程序计数器的值，指示下一条将运行的指令
-
-​       -一组通用的寄存器的当前值，堆，栈
-
-​       -一组系统资源(如打开的文件)
-
-​    总之，进程包含了正在运行的一个程序的所有状态信息。
-
-b、进程与程序的联系
-
-​    程序是产生进程的基础
-
-​    -程序的每次运行构成不同的进程
-
-​    -进程是程序功能的体现
-
-​    -通过多次执行，一个程序可对应多个进程；通过调用关系，一个进程可包括多个程序。
-
-c、进程与程序的区别
-
-​    进程是动态的，程序是静态的：程序是有序代码的集合；进程是程序的执行，进程有核心态/用户态
-
-​    -进程是暂时的，程序是永久的：进程是一个状态变化的过程，程序可长久保存
-
-​    -进程与程序的组成不同：进程的组成包括程序，数据和进程控制块(进程的状态信息)
-
-3）进程特点
-
-动态性：可动态地创建，结束进程
-
-并发性：进程可以被独立调度并占用处理机运行
-
-独立性：不同进程的工作不互相影响
-
-制约性：因访问共享数据/资源或进程间同步而产生制约
-
-##### 2、进程间通信（IPC，InterProcess Communication）
-
-1）信号
-
-2）管道
-
-3）消息队列
-
-4）共享内存
-
-## 五、系统调度
-
-##### 1、面向通用计算系统的调度算法总结
-
-​    实际上这些调度算法和实际的调度算法是有很多区别的(复杂的多)，但是基本的特征是类似的。
-
-1）FCFS先来先服务
-
-​    ->不公平，等待时间较长；
-
-2）SPN/SRT短进程优先
-
-​    ->不公平，但是平均等待时间最小；
-
-​    ->需要精确预测计算机时间；
-
-​    ->可能导致饥饿；
-
-3）HRRN最高响应比优先
-
-​    ->给予SPN调度的改进；
-
-​    ->不可抢占；
-
-4）Round Robin轮循
-
-​    ->公平，但是平均等待时间较长；
-
-5）MLFQ多级反馈队列
-
-​    ->根据CPU和I/O状态动态调整；和SPN类似；
-
-6）Fair-share scheduling公平共享调度
-
-​    ->公平是第一要素。
-
- 
-
-## 六、死锁
-
-##### 1、死锁成立的必要条件
-
-1）互斥
-
-2）持有并等待；
-
-3）无抢占；
-
-4）循环等待；
-
-##### 2、死锁处理办法
-
-1）死锁预防
-
-2）死锁避免；（确保不会发生环形等待）
-
-3）死锁检测；
-
-4）死锁恢复；  
