--- a/基础知识汇总/计算机网络.md
+++ b/基础知识汇总/计算机网络.md
@@ -526,3 +526,48 @@ send函数用来向TCP连接的另一端发送数据。客户程序一般用send
 
 recv函数用来从TCP连接的另一端接收数据，当应用程序调用recv函数时，recv先等待s的发送缓冲中的数据被协议传送完毕，然后从缓冲区中读取接收到的内容给应用层。
  accept函数用了接收一个连接，内核维护了半连接队列和一个已完成连接队列，当队列为空的时候，accept函数阻塞，不为空的时候accept函数从上边取下来一个已完成连接，返回一个文件描述符。
+
+##### 22、TIME_WAIT作用，为什么是2MSL，如果过多会有什么问题？
+
+作用：1）防止旧连接的数据包  2）确保连接正确关闭
+
+2MSL：网络中可能存在来自发送方的数据包，当这些发送方的数据包被接收方处理后又会向对方发送响应，所以一来一回需要等待2倍的时间。
+
+TIME_WAIT过多：对于短连接来说，如果短时间进行大量短连接，客户端所在操作系统的sockte端口和句柄被用尽，系统无法发起新的连接
+
+##### 23、https采用了对称加密和非对称加密的混合加密方式，为什么？
+
+##### 加密方式：
+
+1）在建立通信前采用非对称加密的方式交换会话密钥，后续就不再使用非对称加密；
+
+2）在通信过程中全部采用对称加密的会话密钥的方式加密明文数据；
+
+##### 采用混合加密的原因：
+
+1）对称加密只使用一个密钥，运算速度快，密钥必须保密，无法做到安全的密钥交换；
+
+2）非对称加密使用两个密钥：公钥和密钥，公钥可以任意分发二私钥保密，解决了密钥交换问题，但速度慢；
+
+##### 24、TCP keep alive和http keep alive 区别
+
+1)TCP中的keep-alive是TCP保险定时器，通过每隔一段时间TCP自动发送一个数据为空的报文给对方，如果对方回应了这个报文，说明还在线，如果对方没有在线，并且重试多次后则认为链接丢失，没必要保持连接。
+
+2）http的keep-alive，通过使用keep-alive机制，可以减少tcp连接建立次数，也意味着减少TIME_WAIT状态连接。
+
+##### 25、DNS解析过程
+
+1）客户端⾸先会发出⼀个 DNS 请求，问 www.server.com 的 IP 是啥，并发给本地 DNS 服务器（也就是客户端 的 TCP/IP 设置中填写的 DNS 服务器地址）。 
+
+2）本地域名服务器收到客户端的请求后，如果缓存⾥的表格能找到 www.server.com，则它直接返回 IP 地址。如 果没有，本地 DNS 会去问它的根域名服务器：“⽼⼤， 能告诉我 www.server.com 的 IP 地址吗？” 根域名服 务器是最⾼层次的，它不直接⽤于域名解析，但能指明⼀条道路。 
+
+3）根 DNS 收到来⾃本地 DNS 的请求后，发现后置是 .com，说：“www.server.com 这个域名归 .com 区域管 理”，我给你 .com 顶级域名服务器地址给你，你去问问它吧。” 
+
+4）本地 DNS 收到顶级域名服务器的地址后，发起请求问“⽼⼆， 你能告诉我 www.server.com 的 IP 地址吗？”
+
+5）顶级域名服务器说：“我给你负责 www.server.com 区域的权威 DNS 服务器的地址，你去问它应该能问到”。 
+
+6）本地 DNS 于是转向问权威 DNS 服务器：“⽼三，www.server.com对应的IP是啥呀？” server.com 的权威 DNS 服务器，它是域名解析结果的原出处。为啥叫权威呢？就是我的域名我做主。 
+
+7）权威 DNS 服务器查询后将对应的 IP 地址 X.X.X.X 告诉本地 DNS。
+
