--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -286,7 +286,7 @@ C++优势：1）C++是不断更新的语言
 
 因为编译器必须能够**读取这个结构的声明以理解这个数据类型的大小**、行为等方面的所有规则。有一条规则在任何关系中都很重要，那就是谁可以访问我的私有部分。
 
-4、结构体所占内存计算
+###### 4、结构体所占内存计算
 
 ```
 struct st {
@@ -302,4 +302,100 @@ struct st {
 	float d;
 }; //占用24字节
 ```
+
+##### 5、100M内存排序1G的数据
+
+内存不够，采用外部排序的方法，采用归并排序。
+
+1）将1G的数据拆分成10个100M，对其先进行内部排序；
+
+2）在内存中开辟一个大小为10的最小堆，和一个缓冲区；
+
+3）取排好序的10份数据的首位进入最小堆，则最小的数位于堆顶，移除堆顶元素并写入缓冲区，然后从移除元素的元素所属数组中的下一位进入最小堆，再移除堆顶元素进入缓冲区，直到缓冲区满，缓冲区回写磁盘，清空缓冲区，再次将数据置入最小堆；直到10份数据全部读完，最后将最小堆的元素按顺序写回磁盘即可；
+
+##### 6、100万个数如何找最大的100个数
+
+1、快排思想
+
+2、建立最小堆
+
+3、分块查找，先分成100份，找出最大的数，然后毕竟。再进行100份数据的最大数进行比较后，再取最大数所在组的第二大数，加入比较。
+
+##### 7、有一个1G大小的一个文件，里面每一行是一个词，词的大小不超过16字节，内存限制大小是1M。返回频数最高的100个词
+
+​        方案：顺序读文件中，对于每个词x，取hash(x)%5000，然后按照该值存到5000个小文件（记为x0,x1,...x4999）中。这样每个文件大概是200k左右。
+
+　　如果其中的有的文件超过了1M大小，还可以按照类似的方法继续往下分，直到分解得到的小文件的大小都不超过1M。 对每个小文件，统计每个文件中出现的词以及相应的频率（可以采用trie树/hash_map等），并取出出现频率最大的100个词（可以用含100个结点的最小堆），并把100个词及相应的频率存入文件，这样又得到了5000个文件。下一步就是把这5000个文件进行归并（类似与归并排序）的过程了。
+
+##### 8、吃羊问题
+
+1）只有1老虎，1羊，那么这之羊会被吃；
+
+2）2老虎，1羊，那么羊没有老虎敢吃；
+
+3）3老虎，1羊，那么老虎吃羊后，就变成2老虎1羊的问题，没有敢吃，所以吃；
+
+4）。。。
+
+如果老虎是奇数，就吃羊，如果老虎是偶数，就不吃羊
+
+
+
+# 乐鑫技术面二面7.2
+
+##### 1、问项目、论文
+
+##### 2、static用法
+
+##### 3、程序编译后组成（没答好，栈、堆、未经初始化的变量，已经初始化的数据，代码段）
+
+##### 4、如何知道程序编译后的各部分在操作系统中的位置
+
+​		通过链接脚本选择位置。
+
+##### 5、堆、栈区别
+
+##### 6、操作系统的中断处理过程
+
+1）中断请求
+
+2）中断判优，CPU一次只能处理一个中断源的请求，当同时有多个中断源向CPU提出中断申请请求时，CPU必须找出中断优先级最高的中断源。
+
+3）中断响应 （保护硬件现场；关中断；保护断点；获取中断服务程序的入口地址）
+
+4）中断返回（返回到原程序的断点处，恢复硬件现场，继续执行原程序）
+
+这里 ，中断返回操作是中断响应操作的逆过程
+
+[中断处理的基本过程_Artorias的博客-CSDN博客_中断处理过程](https://blog.csdn.net/weixin_42240667/article/details/105071373)
+
+##### 7、volatile关键字
+
+##### 8、如何判断是大端存储还是小端存储？
+
+1）利用大小端存储特性
+
+① 定义一个 32 位的 int 型变量，0x11223344
+
+② 将这个 int 型变量的低地址开始的 8 位存储的值取出来，取出来的方法就是利用强制类型转换
+
+③ 如果这个值是 0x11 那么说明低地址存储了值的高位，所以为大端序
+
+④ 如果这个值是 0x44 那么说明低地址存储了值的低位，所以为小端序
+
+2）定义联合体，利用联合体共用内存的特点
+
+```
+union {
+    int i;
+    char c;
+}un;
+un.i=1;
+if (un.c == 1)  printf("小端\n");
+else   printf("大端\n");
+```
+
+##### 9、联合体（共同体）和结构体区别
+
+“联合体”(union）与“结构体”(struct)有一些相似之处。但两者有本质上的不同。在结构体中,各成员有各自的内存空间, 一个结构变量的总长度是各成员长度之和。而在“联合”中,各成员共享一段内存空间, 一个联合变量的长度等于各成员中最长的长度。应该说明的是, 这里所谓的共享不是指把多个成员同时装入一个联合变量内, 而是指该联合变量可被赋予任一成员值,但每次只能赋一种值, 赋入新值则冲去旧值。
 
