--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -286,7 +286,7 @@ C++优势：1）C++是不断更新的语言
 
 因为编译器必须能够**读取这个结构的声明以理解这个数据类型的大小**、行为等方面的所有规则。有一条规则在任何关系中都很重要，那就是谁可以访问我的私有部分。
 
-###### 4、结构体所占内存计算
+##### 4、结构体所占内存计算
 
 ```
 struct st {
