--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -1,4 +1,4 @@
-# 张铭招银网络一面
+# zm招银网络一面
 
 ##### 1、大端模式和小端模式区别
 
@@ -88,7 +88,7 @@ int const *p 和const int *p意义一样，指向常量的指针
 
  
 
-# 盛姜聪华泰面经
+# sjc华泰面经
 
 **1、介绍项目—识别魔方，解算过程**
 
@@ -399,8 +399,6 @@ else   printf("大端\n");
 
 “联合体”(union）与“结构体”(struct)有一些相似之处。但两者有本质上的不同。在结构体中,各成员有各自的内存空间, 一个结构变量的总长度是各成员长度之和。而在“联合”中,各成员共享一段内存空间, 一个联合变量的长度等于各成员中最长的长度。应该说明的是, 这里所谓的共享不是指把多个成员同时装入一个联合变量内, 而是指该联合变量可被赋予任一成员值,但每次只能赋一种值, 赋入新值则冲去旧值。
 
-
-
 ## 大华电话一面面经
 
 纯聊项目
@@ -421,6 +419,114 @@ else   printf("大端\n");
 redis中的dict.c中的设计思路是用两个hash表来进行进行扩容和转移的工作：当从第一个hash表的loadFactor=1时，假设要往字典里插入一个元素。首先为第二个hash表开辟2倍第一个hash表的容量。同一时候将第一个hash表的一个非空桶中元素所有转移到第二个hash表中。然后把待插入元素存储到第二个hash表里。继续往字典里插入第二个元素，又会将第一个hash表的一个非空桶中元素所有转移到第二个hash表中，然后把元素存储到第二个hash表里……直到第一个hash表为空。
 
 这样的策略就把第一个hash表全部元素的转移分摊为多次转移，并且每次转移的期望时间复杂度为O(1)。
+
+##### 2、undefined reference产生在哪一步？
+
+链接阶段
+
+##### 3、volatile关键字
+
+##### 作用：
+
+防止编译器作优化，Volatile意思是“易变的”，应该解释为“直接存取原始内存地址”比较合适。“易变”是因为外在因素引起的，像多线程，中断等。
+
+##### 用途：
+
+1）并行设备的硬件寄存器（如：状态寄存器）；
+
+2）中断服务程序中修改的供其他程序检测的变量（当变量在触发某中断程序中修改，而编译器判断主函数里面没有修改该变量，因此可能只执行一次从内存到某寄存器的读操作，而后每次只会从该寄存器中读取变量副本，使得中断程序的操作被短路。）
+
+3）多任务环境下各任务间共享的标志（在本次线程内, 当读取一个变量时，编译器优化时有时会先把变量读取到一个寄存器中；以后，再取变量值时，就直接从寄存器中取值；当内存变量或寄存器变量在因别的线程等而改变了值，该寄存器的值不会相应改变，从而造成应用程序读取的值和实际的变量值不一致 。）
+
+##### 使用场景：
+
+1）一个参数既可以是const还可以是volatile，如只读的状态寄存器；
+
+2）一个指针可以是volatile，如一个中服务子程序修改一个指向buffer的指针；
+
+##### 4、LRU和LFU区别
+
+LRU是最近最少使用页面置换算法(Least Recently Used),也就是首先淘汰最长时间未被使用的页面。
+
+LFU是最近最不常用页面置换算法(Least Frequently Used),也就是淘汰一定时期内被访问次数最少的页。
+
+比如,第二种方法的时期T为10分钟,如果每分钟进行一次调页,主存块为3,若所需页面走向为2 1 2 1 2 3 4
+
+注意,当调页面4时会发生缺页中断，若按LRU算法,应换页面1(1页面最久未被使用) 但按LFU算法应换页面3(十分钟内,页面3只使用了一次)
+
+可见LRU关键是看页面最后一次被使用到发生调度的时间长短,而LFU关键是看一定时间段内页面被使用的频率。
+
+
+
+## 蔚来汽车一面 0710
+
+1、项目  项目难点
+
+2、手撕代码 两个栈实现一个队列
+
+3、C++析构函数作用
+
+4、C++三大特性
+
+5、const用法（常量和函数？）
+
+6、TCP三次握手、四次挥手；为什么挥手需要三次？
+
+7、进程和线程，什么是进程？什么是线程？使用场景
+
+8、http和https端口号（80、443）
+
+## 蔚来汽车二面 0710
+
+1、项目  项目难点（快递分拣）
+
+2、手撕代码 链表找环
+
+3、C++多态
+
+4、重载和重写的区别
+
+5、二叉树、队列、栈以及使用场景
+
+6、进程间通信方式
+
+7、二叉树，问了二叉搜索树和平衡二叉树
+
+## 蔚来汽车三面 0710
+
+##### 1、项目  项目难点（快递分拣）
+
+##### 2、手撕代码 两个栈实现一个队列
+
+##### 3、Linux指令，如何查看运行中的进程，显示磁盘内存占用空间，如何判断一个linux的版本号
+
+##### 4、数据库连接池项目，询问如何优化（面试官提升熔断、需要支持主流数据库）
+
+##### 5、讲一下fork
+
+##### 6、进程线程通信方式
+
+##### 7、多进程和多线程使用场景
+
+##### 8、https如何加密
+
+##### 9、TCP如何保证可靠性传输
+
+##### 10、free命令：查看总内存、使用、空闲等情况
+
+total：总计物理内存大小； used：已使用多大；  free：可拥有多少；  shared：多个进程共享的内存总额； buffers/cached：磁盘缓存的大小
+
+##### 11、vmstat命令：查看CPU使用率、内存使用、IO读写情况
+
+procs（进程）：r--运行队列中进程数量，这个值也可以判断是否需要增强CPU（长期大于1） --b 等待IO的进程数量；
+
+memory（内存）：swap--使用虚拟内存大小；  free--空闲物理内存大小；  buff：用作缓冲的内存大小；  cache：用作缓存的内存大小；
+
+CPU（以百分比表示）： us--用户进程执行时间百分比（user time）；  sy--内核系统进程执行时间百分比（system time）； wa：IO等待时间百分比； id：空闲时间百分比；
+
+##### 12、http在四层网络协议的哪一层
+
+
 
 
 
