--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -528,6 +528,28 @@ CPU（以百分比表示）： us--用户进程执行时间百分比（user time
 
 
 
+## 百度一面
+
+1、deque的底层实现
+
+2、红黑树底层实现
+
+3、哈希表底层实现，以及出现哈希冲突后，查询时间复杂度
+
+4、B+树、B树的区别
+
+5、单向链表和双向链表
+
+6、手写快排（没写出来，擦），为什么sort用快排
+
+7、项目问的少
+
+8、为什么数据库用B+树
+
+9、vector插入元素
+
+10、栈和队列的区别，如何实现栈和队列（数组和链表）
+
 
 
 
