--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -530,25 +530,51 @@ CPU（以百分比表示）： us--用户进程执行时间百分比（user time
 
 ## 百度一面
 
-1、deque的底层实现
+##### 1、deque的底层实现
 
-2、红黑树底层实现
+deque和vector的最大差异是，deque允许以常数时间内对起头端进行元素的插入与删除操作；
 
-3、哈希表底层实现，以及出现哈希冲突后，查询时间复杂度
+deque没有所谓容量的概念，是动态地以分段连续空间组合而成，随时可以增加一段新的空间并链接起来；
 
-4、B+树、B树的区别
+对deque进行排序操作，为了最高效率，可将deque先完整复制到一个vector，将vector排序后，再复制回deque；
 
-5、单向链表和双向链表
+##### 2、红黑树底层实现
 
-6、手写快排（没写出来，擦），为什么sort用快排
+##### 3、哈希表底层实现，以及出现哈希冲突后，查询时间复杂度
 
-7、项目问的少
+哈希表的构造方法是：假设要存储的数据元素个数为n，设置一个长度为m（m≥n）的连续存储单元，分别以每个数据元素的关键字 *Ki(0<= i <=n-1)* 为自变量，通过哈希函数 *hash(Ki)* 把 *Ki* 映射为内存单元的某个地址 *hash(ki)*，并将该数据元素存储在该内存单元中。
 
-8、为什么数据库用B+树
+构造哈希函数有三个要点：
 
-9、vector插入元素
+第一，运算过程要尽量简单高效，以提高哈希表的插入和检索效率；
 
-10、栈和队列的区别，如何实现栈和队列（数组和链表）
+第二，哈希函数应该具有较好的散列性，以降低哈希冲突的概率；
+
+第三，哈希函数应具有较大的压缩性，以节省内存。
+
+1）直接定址法
+
+2）除留余数法
+
+3）数字分析法
+
+出现哈希冲突后，查询时间最差复杂度是O(n);
+
+##### 4、B+树、B树的区别
+
+##### 5、单向链表和双向链表
+
+##### 6、手写快排（没写出来，擦），为什么sort用快排
+
+##### 7、项目问的少
+
+##### 8、为什么MySQL数据库用B+树?
+
+因为mysql是关系型数据库，数据遍历比较多。而B+ 树只需要去遍历叶子节点就可以实现整棵树的遍历。在数据库中基于范围的查询是非常频繁的，因此 MySQL 的 Innodb 引擎就使用了 B+ 树作为其索引的数据结构。
+
+##### 9、vector插入元素
+
+##### 10、栈和队列的区别，如何实现栈和队列（数组和链表）
 
 
 
