--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -578,5 +578,34 @@ deque没有所谓容量的概念，是动态地以分段连续空间组合而成
 
 
 
+## 牛客面经
 
+##### 1、mysql中索引优缺点
 
+1）优点：
+
+通过创建唯一性索引，可以保证数据库表中每一行数据的唯一性。
+
+可以大大加快数据的检索速度，这也是创建索引的最主要的原因。
+
+可以加速表和表之间的连接，特别是在实现数据的参考完整性方面特别有意义。
+
+在使用分组和排序子句进行数据检索时，同样可以显著减少查询中分组和排序的时间。
+
+通过使用索引，可以在查询的过程中，使用优化隐藏器，提高系统的性能。
+
+2）缺点：
+
+创建索引和维护索引要耗费时间，这种时间随着数据量的增加而增加。
+
+索引需要占物理空间，除了数据表占数据空间之外，每一个索引还要占一定的物理空间，如果要建立聚簇索引，那么需要的空间就会更大。
+
+当对表中的数据进行增加、删除和修改的时候，索引也要动态的维护，这样就降低了数据的维护速度。
+
+##### 2、mutable关键字
+
+mutable是可变的，易变的。在C++中，mutable也是为了突破const的限制而设置的，被mutable修饰的变量，将永远处于可变的状态，即使在一个const函数中。
+
+##### 3、栈溢出
+
+对每个程序来说，栈能使用的内存是有限的，一般是 1M~8M，这在编译时就已经决定了，程序运行期间不能再改变。如果程序使用的栈内存超出最大值，就会发生栈溢出（Stack Overflow）错误，程序就崩溃了。
