--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -1,4 +1,4 @@
-# zm招银网络一面
+## zm招银网络一面
 
 ##### 1、大端模式和小端模式区别
 
@@ -88,7 +88,7 @@ int const *p 和const int *p意义一样，指向常量的指针
 
  
 
-# sjc华泰面经
+## sjc华泰面经
 
 **1、介绍项目—识别魔方，解算过程**
 
@@ -134,7 +134,7 @@ int const *p 和const int *p意义一样，指向常量的指针
 
  
 
-# 华泰一面
+## 华泰一面
 
 ##### 1、指针和引用的区别（初始化的不同）
 
@@ -154,7 +154,7 @@ int const *p 和const int *p意义一样，指向常量的指针
 
  
 
-# 嵌入式面经
+## 嵌入式面经
 
 ##### 1、为什么嵌入式不用C++？
 
@@ -170,7 +170,7 @@ C++优势：1）C++是不断更新的语言
 
  
 
-# Cadence面经
+## Cadence面经
 
 ##### 1、vector、list区别
 
@@ -212,7 +212,7 @@ C++优势：1）C++是不断更新的语言
 
 
 
-# vivo技术面6.23
+## vivo技术面6.23
 
 1、介绍项目，项目遇到的BUG，怎么解决的，出现的问题是什么
 
@@ -226,7 +226,7 @@ C++优势：1）C++是不断更新的语言
 
 
 
-# 乐鑫技术面一面6.22
+## 乐鑫技术面一面6.22
 
 1、问项目、论文
 
@@ -234,7 +234,7 @@ C++优势：1）C++是不断更新的语言
 
 3、反问，工作节奏，部门工作
 
-# VIVO HR面6.25
+## VIVO HR面6.25
 
 1、自我介绍（共享屏幕，被说PPT制作质量低，亮点少）
 
@@ -341,7 +341,7 @@ struct st {
 
 
 
-# 乐鑫技术面二面7.2
+## 乐鑫技术面二面7.2
 
 ##### 1、问项目、论文
 
@@ -402,61 +402,6 @@ else   printf("大端\n");
 ## 大华电话一面面经
 
 纯聊项目
-
-## 牛客面经
-
-##### 1、如何哈希扩容
-
-如果一个hash表中桶的个数为 size , 存储的元素个数为used .则我们称 used / size 为负载因子loadFactor . 一般的情况下，当loadFactor<=1时，hash表查找的期望复杂度为O(1). 因此。每次往hash表中加入元素时。我们必须保证是在loadFactor <1的情况下，才可以加入。
-
-**容量扩张（Expand）& 分摊转移**
-
-当我们加入一个新元素时。一旦loadFactor大于等于1了，我们不能单纯的往hash表里边加入元素。
-
-于是有了例如以下思路 ：Hash表中每次发现loadFactor==1时，就开辟一个原来桶数组的两倍空间（称为新桶数组），然后把原来的桶数组中元素所有转移过来到新的桶数组中。注意这里转移是须要元素一个个又一次哈希到新桶中的。原因后面会讲到。
-
-这样的方法的缺点是，容量扩张是一次完毕的，期间要花非常长时间一次转移hash表中的全部元素。这样在hash表中loadFactor==1时。往里边插入一个元素将会等候非常长的时间。
-redis中的dict.c中的设计思路是用两个hash表来进行进行扩容和转移的工作：当从第一个hash表的loadFactor=1时，假设要往字典里插入一个元素。首先为第二个hash表开辟2倍第一个hash表的容量。同一时候将第一个hash表的一个非空桶中元素所有转移到第二个hash表中。然后把待插入元素存储到第二个hash表里。继续往字典里插入第二个元素，又会将第一个hash表的一个非空桶中元素所有转移到第二个hash表中，然后把元素存储到第二个hash表里……直到第一个hash表为空。
-
-这样的策略就把第一个hash表全部元素的转移分摊为多次转移，并且每次转移的期望时间复杂度为O(1)。
-
-##### 2、undefined reference产生在哪一步？
-
-链接阶段
-
-##### 3、volatile关键字
-
-##### 作用：
-
-防止编译器作优化，Volatile意思是“易变的”，应该解释为“直接存取原始内存地址”比较合适。“易变”是因为外在因素引起的，像多线程，中断等。
-
-##### 用途：
-
-1）并行设备的硬件寄存器（如：状态寄存器）；
-
-2）中断服务程序中修改的供其他程序检测的变量（当变量在触发某中断程序中修改，而编译器判断主函数里面没有修改该变量，因此可能只执行一次从内存到某寄存器的读操作，而后每次只会从该寄存器中读取变量副本，使得中断程序的操作被短路。）
-
-3）多任务环境下各任务间共享的标志（在本次线程内, 当读取一个变量时，编译器优化时有时会先把变量读取到一个寄存器中；以后，再取变量值时，就直接从寄存器中取值；当内存变量或寄存器变量在因别的线程等而改变了值，该寄存器的值不会相应改变，从而造成应用程序读取的值和实际的变量值不一致 。）
-
-##### 使用场景：
-
-1）一个参数既可以是const还可以是volatile，如只读的状态寄存器；
-
-2）一个指针可以是volatile，如一个中服务子程序修改一个指向buffer的指针；
-
-##### 4、LRU和LFU区别
-
-LRU是最近最少使用页面置换算法(Least Recently Used),也就是首先淘汰最长时间未被使用的页面。
-
-LFU是最近最不常用页面置换算法(Least Frequently Used),也就是淘汰一定时期内被访问次数最少的页。
-
-比如,第二种方法的时期T为10分钟,如果每分钟进行一次调页,主存块为3,若所需页面走向为2 1 2 1 2 3 4
-
-注意,当调页面4时会发生缺页中断，若按LRU算法,应换页面1(1页面最久未被使用) 但按LFU算法应换页面3(十分钟内,页面3只使用了一次)
-
-可见LRU关键是看页面最后一次被使用到发生调度的时间长短,而LFU关键是看一定时间段内页面被使用的频率。
-
-
 
 ## 蔚来汽车一面 0710
 
@@ -578,7 +523,7 @@ deque没有所谓容量的概念，是动态地以分段连续空间组合而成
 
 
 
-## 牛客面经
+## 牛客面经--数据库
 
 ##### 1、mysql中索引优缺点
 
@@ -602,10 +547,132 @@ deque没有所谓容量的概念，是动态地以分段连续空间组合而成
 
 当对表中的数据进行增加、删除和修改的时候，索引也要动态的维护，这样就降低了数据的维护速度。
 
-##### 2、mutable关键字
+##### 2、mysql和redis区别总结
+
+1）类型上，mysql是关系型数据库，redis是缓存数据库；
+
+2）作用上，mysql用于持久化的存储数据到硬盘，功能强大，但是速度慢；redis用于存储使用较为频繁的数据到缓存中，读取速度快；
+
+3）存放位置上，mysql数据存放在磁盘；redis存放在内存；
+
+### 牛客面经--计算机网络
+
+##### 1、http状态码
+
+1xx：指示信息--表示请求已接收，继续处理。
+
+2xx：成功--表示请求已被成功接收、理解、接受。
+
+3xx：重定向--要完成请求必须进行更进一步的操作。
+
+4xx：客户端错误--请求有语法错误或请求无法实现。
+
+5xx：服务器端错误--服务器未能实现合法的请求。
+
+##### 常见状态代码、状态描述的详细说明如下。
+
+200 OK：客户端请求成功。
+
+206 partial content服务器已经正确处理部分GET请求，实现断点续传或同时分片下载，该请求必须包含Range请求头来指示客户端期望得到的范围
+
+300 multiple choices（可选重定向）:被请求的资源有一系列可供选择的反馈信息，由浏览器/用户自行选择其中一个。
+
+301 moved permanently（永久重定向）：该资源已被永久移动到新位置，将来任何对该资源的访问都要使用本响应返回的若干个URI之一。
+
+302 move temporarily(临时重定向)：请求的资源现在临时从不同的URI中获得，
+
+304：not modified :如果客户端发送一个待条件的GET请求并且该请求以经被允许，而文档内容未被改变，则返回304,该响应不包含包体（即可直接使用缓存）。
+
+403 Forbidden：服务器收到请求，但是拒绝提供服务。
+
+404 Not Found：请求资源不存在，举个例子：输入了错误的URL。
+
+
+
+### 牛客面经--操作系统
+
+##### 1、同步IO和异步IO区别
+
+I/O是分为两个过程的：1）数据准备的过程；2）数据从内核空间拷贝到用户进程缓冲区；
+
+异步IO和同步IO的区别在于请求数据是否需要等待
+
+##### 2、LRU和LFU区别
+
+LRU是最近最少使用页面置换算法(Least Recently Used),也就是首先淘汰最长时间未被使用的页面。
+
+LFU是最近最不常用页面置换算法(Least Frequently Used),也就是淘汰一定时期内被访问次数最少的页。
+
+比如,第二种方法的时期T为10分钟,如果每分钟进行一次调页,主存块为3,若所需页面走向为2 1 2 1 2 3 4
+
+注意,当调页面4时会发生缺页中断，若按LRU算法,应换页面1(1页面最久未被使用) 但按LFU算法应换页面3(十分钟内,页面3只使用了一次)
+
+可见LRU关键是看页面最后一次被使用到发生调度的时间长短,而LFU关键是看一定时间段内页面被使用的频率。
+
+## 牛客面经--C++
+
+##### 1、mutable关键字
 
 mutable是可变的，易变的。在C++中，mutable也是为了突破const的限制而设置的，被mutable修饰的变量，将永远处于可变的状态，即使在一个const函数中。
 
-##### 3、栈溢出
+##### 2、栈溢出
 
 对每个程序来说，栈能使用的内存是有限的，一般是 1M~8M，这在编译时就已经决定了，程序运行期间不能再改变。如果程序使用的栈内存超出最大值，就会发生栈溢出（Stack Overflow）错误，程序就崩溃了。
+
+##### 3、如何哈希扩容
+
+如果一个hash表中桶的个数为 size , 存储的元素个数为used .则我们称 used / size 为负载因子loadFactor . 一般的情况下，当loadFactor<=1时，hash表查找的期望复杂度为O(1). 因此。每次往hash表中加入元素时。我们必须保证是在loadFactor <1的情况下，才可以加入。
+
+**容量扩张（Expand）& 分摊转移**
+
+当我们加入一个新元素时。一旦loadFactor大于等于1了，我们不能单纯的往hash表里边加入元素。
+
+于是有了例如以下思路 ：Hash表中每次发现loadFactor==1时，就开辟一个原来桶数组的两倍空间（称为新桶数组），然后把原来的桶数组中元素所有转移过来到新的桶数组中。注意这里转移是须要元素一个个又一次哈希到新桶中的。原因后面会讲到。
+
+这样的方法的缺点是，容量扩张是一次完毕的，期间要花非常长时间一次转移hash表中的全部元素。这样在hash表中loadFactor==1时。往里边插入一个元素将会等候非常长的时间。
+redis中的dict.c中的设计思路是用两个hash表来进行进行扩容和转移的工作：当从第一个hash表的loadFactor=1时，假设要往字典里插入一个元素。首先为第二个hash表开辟2倍第一个hash表的容量。同一时候将第一个hash表的一个非空桶中元素所有转移到第二个hash表中。然后把待插入元素存储到第二个hash表里。继续往字典里插入第二个元素，又会将第一个hash表的一个非空桶中元素所有转移到第二个hash表中，然后把元素存储到第二个hash表里……直到第一个hash表为空。
+
+这样的策略就把第一个hash表全部元素的转移分摊为多次转移，并且每次转移的期望时间复杂度为O(1)。
+
+##### 3、如何让new失败不抛出异常
+
+使用set_new_handler处理new失败；
+
+##### 4、undefined reference产生在哪一步？
+
+链接阶段
+
+##### 5、volatile关键字
+
+##### 作用：
+
+防止编译器作优化，Volatile意思是“易变的”，应该解释为“直接存取原始内存地址”比较合适。“易变”是因为外在因素引起的，像多线程，中断等。
+
+##### 用途：
+
+1）并行设备的硬件寄存器（如：状态寄存器）；
+
+2）中断服务程序中修改的供其他程序检测的变量（当变量在触发某中断程序中修改，而编译器判断主函数里面没有修改该变量，因此可能只执行一次从内存到某寄存器的读操作，而后每次只会从该寄存器中读取变量副本，使得中断程序的操作被短路。）
+
+3）多任务环境下各任务间共享的标志（在本次线程内, 当读取一个变量时，编译器优化时有时会先把变量读取到一个寄存器中；以后，再取变量值时，就直接从寄存器中取值；当内存变量或寄存器变量在因别的线程等而改变了值，该寄存器的值不会相应改变，从而造成应用程序读取的值和实际的变量值不一致 。）
+
+##### 使用场景：
+
+1）一个参数既可以是const还可以是volatile，如只读的状态寄存器；
+
+2）一个指针可以是volatile，如一个中服务子程序修改一个指向buffer的指针；
+
+#### 6、如何只在栈/堆上创建对象
+
+1）只在堆上创建对象
+
+①将析构函数声明为私有，但需要一个公有成员函数来进行释放内存的操作。缺点是无法解决继承问题。因为多态中，析构函数不能设为private，所以将析构函数设为protected；
+
+②使用类似单例模式，将构造函数声明为protected，提供一个公有的static函数来完成构造；
+
+2）只在栈上创建对象
+
+new分为两步，只要让new不能调用operate new函数即可，在类内重载一个operate new函数，将其声明为私有；
+
+
+
