--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -537,6 +537,32 @@ deque没有所谓容量的概念，是动态地以分段连续空间组合而成
 
 
 
+## zeku技术一面
+
+##### 1、介绍项目，与视觉slam区别
+
+##### 2、做题：层序遍历二叉树
+
+##### 3、做题：一个8字节的数的位为1的个数，如何用时间复杂度为1（用哈希表，空间换时间）
+
+
+
+## 字节技术一面
+
+##### 1、TCP和UDP区别
+
+##### 2、虚拟地址和线性地址，以及具体实现过程
+
+##### 3、为什么MySQL用B+树作索引
+
+##### 4、代码题，二叉树右视图
+
+##### 5、http状态码
+
+##### 6、思维题，如何根据随机数函数打乱一个数组
+
+
+
 ## 牛客面经--数据库
 
 ##### 1、mysql中索引优缺点
@@ -699,4 +725,12 @@ new分为两步，只要让new不能调用operate new函数即可，在类内重
 1）在堆排序下，数据读取的开销大，堆排在建堆后，数据会跳着访问。
 
 2）堆排会破坏数据本身的有序性
+
+##### 9、operator new、new operator、placement new区别
+
+1）new operator:分配足够的内存；调用构造函数
+
+2）operator new：申请内存，底层用的malloc实现
+
+3）placement new：不进行分配空间，而是在指定的空间上面进行调用构造函数。当然，在析构的时候，也只能显示的调用析构函数。（因为并不是真正的释放空间）
 
