--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -661,7 +661,35 @@ deque没有所谓容量的概念，是动态地以分段连续空间组合而成
 
 404 Not Found：请求资源不存在，举个例子：输入了错误的URL。
 
+##### 2、cookie和session区别
 
+1）cookie：是服务器发送到用户浏览器并保存在本地的一小块数据，它会在浏览器下次向同一服务器再发起请求时被携带并发送到服务器上；
+
+Session： 代表着服务器和客户端一次会话的过程。Session 对象存储特定用户会话所需的属性及配置信息；
+
+2）作用范围不同，cookie保存在客户端（浏览器），session保存在服务器端；
+
+存取方式不同，cookie只能保存ASCII，session可以保存任意数据类型；
+
+有效期不同，cookie可设置为长时间保持吗，比如我们经常使用的默认登录功能，session一般失效时间比较短，当客户端关闭或者session超时都会失效；
+
+隐私策略不同，Cookie 存储在客户端，比较容易遭到不法获取，早期有人将用户的登录名和密码存储在 Cookie 中导致信息被窃取；Session 存储在服务端，安全性相对 Cookie 要好一些。
+
+存储大小不同， 单个 Cookie 保存的数据不能超过 4K，Session 可存储数据远高于 Cookie。
+
+##### 3、UDP如何实现可靠性传输
+
+DP不属于连接协议，具有资源消耗少，处理速度快的优点，所以通常音频，视频和普通数据在传送时，使用UDP较多，因为即使丢失少量的包，也不会对接受结果产生较大的影响。
+
+传输层无法保证数据的可靠传输，只能通过应用层来实现了。实现的方式可以参照tcp可靠性传输的方式，只是实现不在传输层，实现转移到了应用层。
+
+最简单的方式是在应用层模仿传输层TCP的可靠性传输。下面不考虑拥塞处理，可靠UDP的简单设计。
+
+- 1、添加seq/ack机制，确保数据发送到对端
+- 2、添加发送和接收缓冲区，主要是用户超时重传。
+- 3、添加超时重传机制。
+
+详细说明：送端发送数据时，生成一个随机seq=x，然后每一片按照数据大小分配seq。数据到达接收端后接收端放入缓存，并发送一个ack=x的包，表示对方已经收到了数据。发送端收到了ack包后，删除缓冲区对应的数据。时间到后，定时任务检查是否需要重传数据。
 
 ### 牛客面经--操作系统
 
@@ -774,3 +802,8 @@ new分为两步，只要让new不能调用operate new函数即可，在类内重
 
 3）placement new：不进行分配空间，而是在指定的空间上面进行调用构造函数。当然，在析构的时候，也只能显示的调用析构函数。（因为并不是真正的释放空间）
 
+##### 10、const和constexpr区别
+
+const表示只读，const 变量的初始化可以延迟到运行，只保证运行时不被修改；
+
+constexpr是c++11关键字， constexpr 变量必须在编译时进行初始化。所有 constexpr 变量均为常量，因此必须使用常量表达式初始化。
