--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -629,6 +629,40 @@ deque没有所谓容量的概念，是动态地以分段连续空间组合而成
 
 3）针对缓存一致性要求不是很高的场景，那么只通过设置超时时间就可以了。
 
+##### 4、为什么redis用跳表而不是使用红黑树？
+
+1）跳表操作时间复杂度和红黑树相同；
+
+2）跳表代码实现更易读；
+
+3）跳表区间查找效率更高；
+
+4）红黑树在插入和删除的时候可能需要做一些rebalance的操作，这样的操作可能会涉及到整个树的其他部分，而skiplist的操作显然更加局部性一些，锁需要盯住的节点更少，因此在这样的情况下性能好一些。
+
+##### 5、什么是关系型数据库，什么是非关系型数据库？
+
+1）关系型数据库：是指采用了关系模型来组织数据的数据库，关系模式就是二维表格模型；
+
+2）非关系型数据库：指那些不能保证ACID的数据存储系统，一般用键值对；
+
+3）关系型数据库优缺点：
+
+优点：易于维护，使用表结构，格式一致；支持复杂操作，可用于一个表以及多个表之间非常复杂的查询；
+
+缺点：读写性能比较差；固定的表结构，灵活性稍欠；
+
+4）非关系型数据库优缺点：
+
+优点：格式灵活，存储数据的格式可以是key-value，文档形式、图片形式等；速度快，可以使用硬盘或随机存储器作为载体；高扩展性；成本低，部署简单；
+
+缺点：无事务处理；数据结构相对复杂；不提供sql支持，学习和使用成本较高；
+
+##### 6、如何保证数据的原子性和一致性？
+
+原子性：利用undolog回滚日志，进行回滚操作；
+
+一致性：redolog是工作在物理层，它的作用主要是为了减少磁盘开销。因为磁盘操作是极为耗时的，因此，不可能每次对数据的更改都直接写入磁盘。redolog的作用就是缓存起来这些数据改动（缓存到磁盘），等缓存到达一定的数量后再统一写磁盘。当系统崩溃时，根据redolog的内容，将数据恢复到最新的状态；
+
 ### 牛客面经--计算机网络
 
 ##### 1、http状态码
