--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -625,6 +625,42 @@ deque没有所谓容量的概念，是动态地以分段连续空间组合而成
 
 9、学习能力强的表现；
 
+## 字节上海技术一面
+
+1、两个栈实现一个队列
+
+2、TCP网络七层模型
+
+3、TCP的拥塞控制
+
+4、TCP如何做到可靠性传输
+
+5、数据库隔离级别
+
+6、什么是幻读
+
+7、数据库索引为什么用B+树
+
+8、B树、B+树、AVL树、二叉搜索树区别
+
+## 字节上海技术二面
+
+1、进程通信方式，如何查看线程状态；
+
+2、一个类A继承了两个类B、C，各自带有不同的虚函数实现，问有几个虚函数指针；
+
+3、STL中string底层数据结构；
+
+4、常见的页面置换算法；
+
+5、C++中函数调用流程，如A调用了B，压栈出栈流程；
+
+6、做题，能否跳出循环；
+
+7、做题，二叉树找最近公共祖先；
+
+8、TCP四次挥手；
+
 ## 牛客面经--数据库
 
 ##### 1、mysql中索引优缺点
