--- a/基础知识汇总/面经汇总.md
+++ b/基础知识汇总/面经汇总.md
@@ -1,4 +1,4 @@
-## zm招银网络一面
+## 招银网络一面
 
 ##### 1、大端模式和小端模式区别
 
@@ -642,6 +642,65 @@ deque没有所谓容量的概念，是动态地以分段连续空间组合而成
 7、数据库索引为什么用B+树
 
 8、B树、B+树、AVL树、二叉搜索树区别
+
+## 美团一面
+
+1、class和struct区别
+
+2、智能指针是什么
+
+3、虚表是什么，有什么作用
+
+4、C++的模板是在什么阶段
+
+5、什么是内存对齐
+
+元素是按照定义顺序一个一个放到内存中去的，但并不是紧密排列的。从结构体存储的首地址开始，每个元素放置到内存中时，它都会认为内存是按照自己的大小（通常它为4或8）来划分的，因此元素放置的位置一定会在自己宽度的整数倍上开始，这就是所谓的内存对齐。
+
+6、什么是高低位颠倒
+
+##### 7、C/C++中为什么malloc函数需要传入内存大小，而free是不用传入大小
+
+free所需的信息可以直接在信息块中取。信息块和空间都会被释放。
+
+##### 8、能在有序链表中用二分法进行查找吗
+
+9、为什么数据库索引用B+树不用红黑树
+
+##### 10、为什么redis的zset用跳表而不用红黑树
+
+在做范围查找的时候，平衡树比skiplist操作要复杂。在平衡树上，我们找到指定范围的小值之后，还需要以中序遍历的顺序继续寻找其它不超过大值的节点。如果不对平衡树进行一定的改造，这里的中序遍历并不容易实现。而在skiplist上进行范围查找就非常简单，只需要在找到小值之后，对第1层链表进行若干步的遍历就可以实现。
+平衡树的插入和删除操作可能引发子树的调整，逻辑复杂，而skiplist的插入和删除只需要修改相邻节点的指针，操作简单又快速。
+
+11、什么是快速排序
+
+12、什么是动态规划，用来解决什么问题
+
+13、32位操作系统，一个进程的虚拟地址空间有多大？进程能操作的空间有多少
+
+14、linux下的进程和线程
+
+##### 15、单核CPU写多线程程序有什么用
+
+16、写时复制是什么
+
+17、什么是缺页中断
+
+18、TCP连接为什么要有第三次握手
+
+##### 19、操作系统可以开多少端口号
+
+20、Ping的命令可以加端口号吗
+
+21、DNS是什么
+
+## 荣耀一面
+
+1、什么是纯虚函数
+
+2、TCP和UDP区别
+
+3、聊项目
 
 ## 字节上海技术二面
 
