--- a/基础知识汇总/项目总结.md
+++ b/基础知识汇总/项目总结.md
@@ -1,3 +1,13 @@
+英文介绍项目：
+
+##### 1、基于ROS的机械臂视觉抓取系统
+
+In this paper, we propose a method for robot grasping based on  reinforcement learning. A six-degree-of-freedom robot is used to  execute the grasping action, and an RGB-D camera is used as a  sensing module to collect the information. Different from previous  model-based methods, our whole system is data-driven. In order to  better grasp a bunch of randomly placed objects, the pushing action  is added to spare more space for grasping. The whole process is  described as a Markov decision process (MDP). The training is  carried out in simulation. Experimental results show that our  method can complete the grasping work efficiently, especially in  those complicated and difficult scenarios. At the same time, the  model can be directly applied in actual grasping tasks which greatly  reduce the risk of training in the physical world.
+
+##### 2、基于RISC-V的智能家居控制系统
+
+In this paper, a remote monitoring system for smart  home based on the RISC-V processor is designed and  implemented. Compared with common smart home systems,  The RISC-V processor used in this system is easy to  develop and completely free, which makes it easier for the  enterprises to design chip products according to their own  requirements. Only a small number of devices are needed to  complete the networking function. The WeChat applet is  used for remote monitoring, which greatly facilitates users to check the status of devices in their homes and makes the  interface friendly. The system experiment shows that the  system delay time is short, the real-time performance is high. There will be a huge market prospect.
+
 ##### 1、第十三届全国大学生智能汽车竞赛
 
 比赛主要内容：这个竞赛主要内容是通过自主设计的两轮小车在复杂多变的赛道上完成一周的竞速类比赛，在2018年获得了全国冠军。我在本次竞赛中主要负责电路设计和pcb布线，主要包括所有的硬件工作和部分软件工作，硬件包含主控板、驱动电路板以及运算放大器三个模块的电路设计以及车模的机械设计。在软件上主要负责车模的传感器转向控制的优化，包含陀螺仪闭环控制，信号滤波处理两个部分。
